--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Header: Giới Thiệu -->
         <header class="bg-white rounded-xl p-8 text-center mb-12 shadow-soft">
             <div class="relative inline-block">
-                <img src="https://github.com/Mushrum-mmb/Mushrum-mmb.github.io/blob/main/be61c70fc34d7d13245c%20(1).jpg" alt="Bùi Nguyễn Phương Nam" class="mx-auto rounded-full w-40 h-40 mb-6 object-cover border-4 border-blue-500 shadow-lg">
+                <img src="https://raw.githubusercontent.com/Mushrum-mmb/Mushrum-mmb.github.io/blob/main/be61c70fc34d7d13245c%20(1).jpg" alt="Bùi Nguyễn Phương Nam" class="mx-auto rounded-full w-40 h-40 mb-6 object-cover border-4 border-blue-500 shadow-lg">
                 <div class="absolute bottom-4 right-0 bg-blue-500 text-white rounded-full p-1">
                     <i data-feather="check-circle" class="w-5 h-5"></i>
                 </div>
