--- a/index.html
+++ b/index.html
@@ -59,14 +59,24 @@
                 <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Dự Án Nổi Bật</h2>
                 <div class="space-y-4">
                     <div class="bg-blue-50 p-4 rounded-lg hover:shadow-md transition">
-                        <h3 class="font-bold text-lg text-blue-600 mb-2">Hệ Thống Nhận Dạng Hình Ảnh Động Vật</h3>
+                        <div class="flex justify-between items-start">
+                            <h3 class="font-bold text-lg text-blue-600 mb-2">Hệ Thống Nhận Dạng Hình Ảnh Động Vật</h3>
+                            <a href="https://github.com/Mushrum-mmb/Simple-AI-Image-Classification" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
+                                <i data-feather="external-link" class="w-5 h-5"></i>
+                            </a>
+                        </div>
                         <p class="text-sm text-gray-500 mb-2">OpenCV, Python, PyTorch, Gradle</p>
                         <p class="text-sm text-gray-700">Phát triển hệ thống nhận dạng hình ảnh động vật sử dụng các kỹ thuật tiên tiến về xử lý ảnh và học máy.</p>
                     </div>
                     <div class="bg-blue-50 p-4 rounded-lg hover:shadow-md transition">
-                        <h3 class="font-bold text-lg text-blue-600 mb-2">Ứng Dụng Android Quản Lý Học Tập</h3>
-                        <p class="text-sm text-gray-500 mb-2">Java, Android App Dev</p>
-                        <p class="text-sm text-gray-700">Xây dựng ứng dụng di động hỗ trợ sinh viên quản lý thời khóa biểu, điểm số và các hoạt động học tập.</p>
+                        <div class="flex justify-between items-start">
+                            <h3 class="font-bold text-lg text-blue-600 mb-2">Nalice Wireless Custom Keyboard</h3>
+                            <a href="https://github.com/Mushrum-mmb/Nalice" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
+                                <i data-feather="external-link" class="w-5 h-5"></i>
+                            </a>
+                        </div>
+                        <p class="text-sm text-gray-500 mb-2">ZMK Firmware, Keyboard Design</p>
+                        <p class="text-sm text-gray-700">Dự án cá nhân đang tiến hành phát triển bàn phím custom không dây sử dụng ZMK firmware.</p>
                     </div>
                 </div>
             </section>
