--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>PyTorch, OpenCV
                             </li>
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>AI/ML/DL
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>DS/ML/DL
                             </li>
                             <li class="flex items-center">
                                 <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Android App Dev
