--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
                                 <i data-feather="external-link" class="w-5 h-5"></i>
                             </a>
                         </div>
-                        <p class="text-sm text-gray-500 mb-2">OpenCV, Python, PyTorch, Gradle</p>
+                        <p class="text-sm text-gray-500 mb-2">OpenCV, Python, PyTorch, Gradio</p>
                         <p class="text-sm text-gray-700">Phát triển hệ thống nhận dạng hình ảnh động vật sử dụng các kỹ thuật tiên tiến về xử lý ảnh và học máy.</p>
                     </div>
                     <div class="bg-blue-50 p-4 rounded-lg hover:shadow-md transition">
                         <div class="flex justify-between items-start">
-                            <h3 class="font-bold text-lg text-blue-600 mb-2">Nalice Wireless Custom Keyboard</h3>
-                            <a href="https://github.com/Mushrum-mmb/Nalice" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
+                            <h3 class="font-bold text-lg text-blue-600 mb-2">Hệ Thống Đếm Hạt Gạo</h3>
+                            <a href="https://github.com/Mushrum-mmb/Simple_Rice_Detection" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                                 <i data-feather="external-link" class="w-5 h-5"></i>
                             </a>
                         </div>
-                        <p class="text-sm text-gray-500 mb-2">ZMK Firmware, Keyboard Design</p>
-                        <p class="text-sm text-gray-700">Dự án cá nhân đang tiến hành phát triển bàn phím custom không dây sử dụng ZMK firmware.</p>
+                        <p class="text-sm text-gray-500 mb-2">OpenCV, Python, Gradio, Computer Vision</p>
+                        <p class="text-sm text-gray-700">Hệ thống đếm hạt gạo bằng các kĩ thuật tiền xử lí ảnh trong thị giác máy tính. Sử dụng thuật toán watershed và phát hiện contour.</p>
                     </div>
                 </div>
             </section>
