--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                         <p class="text-sm text-gray-500 mb-2">OpenCV, Python, Gradio, Computer Vision</p>
                         <p class="text-sm text-gray-700">Hệ thống đếm hạt gạo bằng các kĩ thuật tiền xử lí ảnh trong thị giác máy tính. Sử dụng thuật toán watershed và phát hiện contour.</p>
                     </div>
+                    <div class="flex items-center justify-between mt-4 text-sm text-gray-700">
+                        <p class="italic">... và vẫn còn nhiều dự án khác</p>
+                        <a href="https://github.com/Mushrum-mmb" target="_blank" class="flex items-center text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
+                            <i data-feather="github" class="w-4 h-4 mr-1"></i>
+                            <span>Xem thêm dự án</span>
+                        </a>
+                    </div>
                 </div>
             </section>
 
