--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bùi Nguyễn Phương Nam - AI Developer</title>
+    <title>Bui Nguyen Phuong Nam - AI Developer</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <style>
@@ -24,16 +24,16 @@
 </head>
 <body class="text-gray-800">
     <div class="container mx-auto px-4 py-12 max-w-5xl">
-        <!-- Header: Giới Thiệu -->
+        <!-- Header: Introduction -->
         <header class="bg-white rounded-xl p-8 text-center mb-12 shadow-soft">
             <div class="relative inline-block">
-                <img src="https://github.com/Mushrum-mmb/Mushrum-mmb.github.io/blob/main/avt.jpg?raw=true" alt="Bùi Nguyễn Phương Nam" class="mx-auto rounded-full w-40 h-40 mb-6 object-cover border-4 border-blue-500 shadow-lg">
+                <img src="https://github.com/Mushrum-mmb/Mushrum-mmb.github.io/blob/main/avt.jpg?raw=true" alt="Bui Nguyen Phuong Nam" class="mx-auto rounded-full w-40 h-40 mb-6 object-cover border-4 border-blue-500 shadow-lg">
                 <div class="absolute bottom-4 right-0 bg-blue-500 text-white rounded-full p-1">
                     <i data-feather="check-circle" class="w-5 h-5"></i>
                 </div>
             </div>
-            <h1 class="text-4xl font-bold gradient-text mb-2">Bùi Nguyễn Phương Nam</h1>
-            <p class="text-xl text-gray-600 mb-4">AI Developer | Sinh Viên Công Nghệ Thông Tin</p>
+            <h1 class="text-4xl font-bold gradient-text mb-2">Bui Nguyen Phuong Nam</h1>
+            <p class="text-xl text-gray-600 mb-4">AI Developer | Computer Science Student</p>
             <div class="flex justify-center space-x-4">
                 <a href="https://www.linkedin.com/in/namush-bui-555948335/" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                     <i data-feather="linkedin" class="w-6 h-6"></i>
@@ -47,53 +47,53 @@
             </div>
         </header>
 
-        <!-- Nội Dung Chính -->
+        <!-- Main Content -->
         <main class="grid md:grid-cols-2 gap-8">
-            <!-- Trái: Kinh Nghiệm & Dự Án -->
+            <!-- Left: Experience & Projects -->
             <section class="bg-white rounded-xl p-6 shadow-soft">
-                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 mb-6 gradient-text">Giới Thiệu</h2>
+                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 mb-6 gradient-text">Introduction</h2>
                 <p class="text-sm text-gray-700 mb-4 leading-relaxed">
-                    Là một sinh viên IT đam mê AI, tôi không ngừng khám phá và phát triển các giải pháp học máy và trí tuệ nhân tạo. Với hơn 1 năm kinh nghiệm lập trình, tôi luôn tìm kiếm các cơ hội để ứng dụng công nghệ vào việc giải quyết các vấn đề thực tế.
+                    As an IT student passionate about AI, I continuously explore and develop machine learning and artificial intelligence solutions. With over 1 year of programming experience, I am always looking for opportunities to apply technology to solve real-world problems.
                 </p>
 
-                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Dự Án Nổi Bật</h2>
+                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Featured Projects</h2>
                 <div class="space-y-4">
                     <div class="bg-blue-50 p-4 rounded-lg hover:shadow-md transition">
                         <div class="flex justify-between items-start">
-                            <h3 class="font-bold text-lg text-blue-600 mb-2">Hệ Thống Nhận Dạng Hình Ảnh Động Vật</h3>
+                            <h3 class="font-bold text-lg text-blue-600 mb-2">Animal Image Recognition System</h3>
                             <a href="https://github.com/Mushrum-mmb/Simple-AI-Image-Classification" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                                 <i data-feather="external-link" class="w-5 h-5"></i>
                             </a>
                         </div>
                         <p class="text-sm text-gray-500 mb-2">OpenCV, Python, PyTorch, Gradio</p>
-                        <p class="text-sm text-gray-700">Phát triển hệ thống nhận dạng hình ảnh động vật sử dụng các kỹ thuật tiên tiến về xử lý ảnh và học máy.</p>
+                        <p class="text-sm text-gray-700">Developed an animal image recognition system using advanced techniques in image processing and machine learning.</p>
                     </div>
                     <div class="bg-blue-50 p-4 rounded-lg hover:shadow-md transition">
                         <div class="flex justify-between items-start">
-                            <h3 class="font-bold text-lg text-blue-600 mb-2">Hệ Thống Đếm Hạt Gạo</h3>
+                            <h3 class="font-bold text-lg text-blue-600 mb-2">Rice Grain Counting System</h3>
                             <a href="https://github.com/Mushrum-mmb/Simple_Rice_Detection" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                                 <i data-feather="external-link" class="w-5 h-5"></i>
                             </a>
                         </div>
                         <p class="text-sm text-gray-500 mb-2">OpenCV, Python, Gradio, Computer Vision</p>
-                        <p class="text-sm text-gray-700">Hệ thống đếm hạt gạo bằng các kĩ thuật tiền xử lí ảnh trong thị giác máy tính. Sử dụng thuật toán watershed và phát hiện contour.</p>
+                        <p class="text-sm text-gray-700">Rice grain counting system using image pre-processing techniques in computer vision. Implemented watershed algorithm and contour detection.</p>
                     </div>
                     <div class="flex items-center justify-between mt-4 text-sm text-gray-700">
-                        <p class="italic">... và vẫn còn nhiều dự án khác</p>
+                        <p class="italic">... and many more projects</p>
                         <a href="https://github.com/Mushrum-mmb" target="_blank" class="flex items-center text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                             <i data-feather="github" class="w-4 h-4 mr-1"></i>
-                            <span>Xem thêm dự án</span>
+                            <span>See more projects</span>
                         </a>
                     </div>
                 </div>
             </section>
 
-            <!-- Phải: Kỹ Năng & Giáo Dục -->
+            <!-- Right: Skills & Education -->
             <section class="bg-white rounded-xl p-6 shadow-soft">
-                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 mb-6 gradient-text">Kỹ Năng</h2>
+                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 mb-6 gradient-text">Skills</h2>
                 <div class="grid grid-cols-2 gap-4 text-sm">
                     <div>
-                        <h3 class="font-semibold mb-2 text-blue-600">Kỹ Năng Chuyên Môn</h3>
+                        <h3 class="font-semibold mb-2 text-blue-600">Technical Skills</h3>
                         <ul class="space-y-1">
                             <li class="flex items-center">
                                 <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Python, Java, C++
@@ -113,41 +113,41 @@
                         </ul>
                     </div>
                     <div>
-                        <h3 class="font-semibold mb-2 text-blue-600">Kỹ Năng Mềm</h3>
+                        <h3 class="font-semibold mb-2 text-blue-600">Soft Skills</h3>
                         <ul class="space-y-1">
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Giải quyết vấn đề
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Problem Solving
                             </li>
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Học hỏi nhanh
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Fast Learner
                             </li>
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Giao tiếp
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Communication
                             </li>
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Quản lý dự án
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Project Management
                             </li>
                             <li class="flex items-center">
-                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>Tiếng Anh (IELTS 6.0)
+                                <i data-feather="check" class="w-4 h-4 mr-2 text-blue-500"></i>English (IELTS 6.0)
                             </li>
                         </ul>
                     </div>
                 </div>
 
-                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Giáo Dục</h2>
+                <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Education</h2>
                 <div class="bg-blue-50 p-4 rounded-lg">
-                    <h3 class="font-bold text-lg text-blue-600">Đại Học Nông Lâm</h3>
-                    <p class="text-sm text-gray-600">Chuyên Ngành Công Nghệ Thông Tin • 2024-2028</p>
+                    <h3 class="font-bold text-lg text-blue-600">Nong Lam University</h3>
+                    <p class="text-sm text-gray-600">Computer Science Major • 2024-2028</p>
                 </div>
             </section>
         </main>
 
-        <!-- Footer: Liên Hệ -->
+        <!-- Footer: Contact -->
         <footer class="text-center mt-12 pt-6 border-t border-gray-200">
-            <p class="text-sm text-gray-600">Email: nambnp30@gmail.com | Số điện thoại: +84 779 046 114</p>
+            <p class="text-sm text-gray-600">Email: nambnp30@gmail.com | Phone: +84 779 046 114</p>
             <p class="text-sm text-gray-600">Linktree: <a href="https://linktr.ee/Namush" target="_blank" class="text-blue-500 hover:underline">linktr.ee/Namush</a></p>
             <div class="mt-4 text-gray-500">
-                © 2025 Bùi Nguyễn Phương Nam. All Rights Reserved.
+                © 2025 Bui Nguyen Phuong Nam. All Rights Reserved.
             </div>
         </footer>
     </div>
