--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <h1 class="text-4xl font-bold gradient-text mb-2">Bui Nguyen Phuong Nam</h1>
-            <p class="text-xl text-gray-600 mb-4">AI Developer | Computer Science Student</p>
+            <p class="text-xl text-gray-600 mb-4">AI Developer | Information Technology Student</p>
             <div class="flex justify-center space-x-4">
                 <a href="https://www.linkedin.com/in/namush-bui-555948335/" target="_blank" class="text-blue-500 hover:text-blue-700 transition transform hover:scale-110">
                     <i data-feather="linkedin" class="w-6 h-6"></i>
@@ -137,7 +137,7 @@
                 <h2 class="text-2xl font-semibold border-b-2 border-blue-500 pb-2 my-6 gradient-text">Education</h2>
                 <div class="bg-blue-50 p-4 rounded-lg">
                     <h3 class="font-bold text-lg text-blue-600">Nong Lam University</h3>
-                    <p class="text-sm text-gray-600">Computer Science Major • 2024-2028</p>
+                    <p class="text-sm text-gray-600">Information Technology Major • 2024-2028</p>
                 </div>
             </section>
         </main>
